--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       <div class="fylo-location">
         <img src="./images/logo.svg" alt="fylo logo" />
         <div class="address">
-          <img src="./images/icon-location.svg" alt="location icon"/>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+          
+          <p><img src="./images/icon-location.svg" alt="location icon"/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
           dolore magna aliqua</p>
         </div>
         <div class="contact-info">
@@ -153,14 +153,13 @@
         <p>Privacy</p>
       </div>
 
-
+      <div class="socail">
+        <h1>H</h1>
+        <h1>H</h1>
+        <h1>H</h1>
+      </div>
     </div>
   </footer>
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
+  <script src="./index.js"></script>
 </body>
 </html>
