complete fylo dark landing page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- stylesheet  -->
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -79,7 +83,8 @@
       </section>
 
       <section class="testimonial-section">
-        <div class="testimonails">
+        <div class="testimonails testimonial-one">
+          <img src="./images/bg-quotes.png" class="quote-image" alt="quote-image" />
           <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
             become a well-oiled collaboration machine.</p>
           <div class="testimonail-profile">
@@ -122,6 +127,7 @@
           <input type="email" placeholder="email@example.com" />
           <button>Get started For Free</button>
         </form>
+        <p class="invalid-email">please enter valid text</p>
       </section>
     </div>
   </main>
@@ -154,9 +160,9 @@
       </div>
 
       <div class="socail">
-        <h1>H</h1>
-        <h1>H</h1>
-        <h1>H</h1>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-telegram"></i>
       </div>
     </div>
   </footer>
